Fixed Alt tag on Image

--- a/highlands.html
+++ b/highlands.html
@@ -1828,7 +1828,7 @@
                             <td>
                             <img class="thumbnail-img" src="Images/HighLands/Pegis_Picnic_Cherry_Pie.png" alt="Cherry Pie" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/HighLands/Pegis_Picnic_Cherry_Pie_Stats.png' alt='Cherry Pie Stats'>">                        
                             <img class="thumbnail-img" src="Images/HighLands/Pegis_Picnic_Pegis_Pendant.png" alt="Pegis Pendant" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/HighLands/Pegis_Picnic_Pegis_Pendant_Stats.png' alt='Cherry Pie Stats'>"> 
-                            <img class="thumbnail-img" src="Images/HighLands/Pegis_Picnic_Termigon_Eye_Ring.png" alt="Pegis Pendant" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/HighLands/Pegis_Picnic_Termigon_Eye_Ring_Stats.png' alt='Termigon Eye Ring Stats'>"> 
+                            <img class="thumbnail-img" src="Images/HighLands/Pegis_Picnic_Termigon_Eye_Ring.png" alt="Termigon Eye Ring" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/HighLands/Pegis_Picnic_Termigon_Eye_Ring_Stats.png' alt='Termigon Eye Ring Stats'>"> 
                             <br>                        
                           </td>                        
                       </table>
