Added Images to Highlands Page

--- a/highlands.html
+++ b/highlands.html
@@ -2045,7 +2045,7 @@
                               Ragged Traveler
                             </td>  
                             <td>
-                            <img class="thumbnail-img" src="Images/HighLands/Minotaur_Ambush" alt="Potions of Greater Healing" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/HighLands/Minotaur_Ambush_Stats.png' alt='Potions of Greater Healing'>">                        
+                            <img class="thumbnail-img" src="Images/HighLands/Minotaur_Ambush_20_Potion_of_Greater_Healing.png" alt="20 Potions of Greater Healing" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/HighLands/Minotaur_Ambush_20_Potion_of_Greater_Healing_Stats.png' alt='20 Potions of Greater Healing Stats'>">                        
                            <br>                        
                           </td>                        
                       </table>  
