Completed Maid Nellys Locket quest

--- a/highlands.html
+++ b/highlands.html
@@ -2126,32 +2126,37 @@
                               Maid Nelly
                             </td>  
                             <td>
-                            <img class="thumbnail-img" src="Images/HighLands/Maid_Nellys_Locket_.png" alt="Potions of Greater Healing" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/HighLands/Minotaur_Ambush_Stats.png' alt='Potions of Greater Healing'>">                        
+                            <img class="thumbnail-img" src="Images/HighLands/Maid_Nellys_Locket_Boots_of_the_Traveller.png" alt="Potions of Greater Healing" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/HighLands/Maid_Nellys_Locket_Boots_of_the_Traveller_Stats.png' alt='Boots of the Traveller'>">                        
                            <br>                        
                           </td>                        
                       </table>  
                       <hr>
                       <p class="clearfix">
                           <img class="npc-img" src="Images/HighLands/Maid_Nellys_Locket_Maid_Nelly.png" alt="Maid Nelly">
-                          <span class="light-red">Maid Nelly:</span> 
+                          <span class="light-red">Maid Nelly:</span> To the west of here is a river where I do my bathing. One day when I was washing, a half man, half bull creature stole my locket from my clothing pile by the bank of the river. Please go to the river and find the Minotaur who stole my locket! 
                           <br>
-                          <span class="green">Player:</span> <span class="player-text-color"> I will find it for you, Maid.</span> 
+                          <span class="green">Player:</span> <span class="player-text-color"> I will find it for you, Maid Nelly.</span> 
                           <br>
                           <span class="green">QUEST RECEIVED:</span><span class="red"> Maid Nelly's Locket</span><span class="orange">, Maid Nelly, a resident of the Abbey, has asked you to find her locket..</span>
                         </p>
                       <hr>
                       <p class="clearfix">  
+                        <img src="Images/HighLands/Maid_Nellys_Locket_Minotaur_Location.png" alt="Minotaur Location" width="500px" height="300px">
+                        <br>
                         <img class="monster-img" src="Images/NPC/Monsters/Minotaur.png" alt="Minotaur" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Monsters/Minotaur_Stats.png' alt='Minotaur Stats'>">
                         <img class="monster-img" src="Images/NPC/Monsters/Injured_Minotaur.png" alt="Injured Minotaur" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Monsters/Injured_Minotaur_Stats.png' alt='Injured Minotaur Stats'>">
                         <br>
-                       Head east of the Abbey to find the <span class="red">Injured Minotaurs</span> and <span class="red">Minotuars</span>. You will be updated as you kill them, <span class="green">QUEST UPDATE: You have killed 75 Minotaurs for the Ragged Traveler!!</span>
-                       When you have killed all 75 you will be updated to return to the Ragged Traveler.
+                       Head south back across the bridge then around the lake to the west to find the <span class="red">Injured Minotaurs</span> and <span class="red">Minotuars</span>. As you are killing them you will be updated <span class="light-blue">You don't seem to find anything...</span> If you are updated with <span class="light-blue">Search elsewhere for Nelly's Locket...</span> You need to go back in the area needed to find the Locket. When you finally find it you will be updated to return to Maid Nelly.
                        <br>                                           
-                       <span class="green">QUEST UPDATE:</span><span class="red"> Minotaur Ambush</span><span class="orange">, You have cleared out many Minotaurs. Return to the Ragged Traveler at the Abbey!</span>
+                       <span class="green">QUEST UPDATE:</span><span class="red"> Maid Nelly's Locket</span><span class="orange">, You have found Nelly's Locket! Return to the Abbey.</span>
+                      </p>
+                      <hr>
+                      <p>
+
                       </p>
                         <hr>
                         <ul>
-                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: 20 Potions of Greater Healing</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Boots of the Traveller</span></li>
                           <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">71,500</strong> Experience Pool <span class="light-red">experience may very</span></li>
                         </ul>                      
                         <hr>
@@ -2159,7 +2164,7 @@
                       <p class="mt-4 py-3 text-center quest-complete">
                         Quest Complete
                       </p>
-                         You cleared a way for the Ragged Traveler.
+                         You have returned Maid Nelly's locket.
                     </div>
                   </div>
                 </div>
