Updated Patch notes from 1-15-23

--- a/index.html
+++ b/index.html
@@ -241,6 +241,23 @@
             </article> -->
             <div class="body-line"></div>
             <article>
+              <small class="article-date">FujiQ 1/15/2023</small>
+             <ul>
+              <li>fix for Gauntlet event - effects could be cast just before entering</li>
+              <li>crims on PvP servers will be sent to a four way portal; you have 60 seconds to choose from Lopal, VF, Meroven, Rahura or be sent to Lopal</li>
+              <li>Fix for Red Dragon Leather set - should now be able to forge items if anvil of veldan is in pack while wearing set</li>
+              <li>Fix for Gatekeepr's gate ins SoC; if you haven't completed the quest you will be harmed and ported back; to prevent players from getting through without quest completion</li>
+              <li>All Housing Deeds and items such a Surveyor tool should be tagged for Construction; server will now check that expansion flag</li>
+              <li>Added AC to weeping winter skirt and winter wildform</li>
+              <li>removed arrow resist from hood of rahura</li>
+              <li>Typo in Crystal Knight quest Rotted > Rotten</li>
+             </ul>
+             <p>
+              
+             </p>
+            </article>
+            <div class="body-line"></div>
+            <article>
               <small class="article-date">FujiQ 1/14/2023</small>
               <p>
                The SoC update
