Added new Patch updates

--- a/index.html
+++ b/index.html
@@ -241,6 +241,57 @@
             </article> -->
             <div class="body-line"></div>
             <article>
+              <small class="article-date">FujiQ 1/21/23</small>
+              <p>
+               Just a bit of cleanup on spawns, drops, items, and the gauntlet event.
+              </p>
+             ===Items/Drops===
+             <ul>
+              <li>New Item: The Prime Fist</li>
+              <li>Fixed typo in Legendary Wok stamina text</li>
+              <li>Stat mismatch corrections - tootips now accurate:
+                <ul>
+                  <li>Calamity Wake Boots +8 DEX</li>
+                  <li>Ritual Sheers +22 INT and +8 CON</li>
+                  <li>Evil Council Leggings +9 CON</li>
+                  <li>Robe of Dark Rites +20 STR and +28 INT</li>
+                </ul>
+              </li>
+              <li>Symboled Blade of Destruction proc adjustment</li>
+              <li>Adjustments to Dirk/Sabre/Axe of many Souls proc effects</li>
+              <li>+100% Soul damage to Dir/Axe/Sabre of Many Souls</li>
+              <li>Oleander Bloom marked SoC</li>
+              <li>Adjusted Lotorian Dungeon drop tables slightly to add Talazarian Emblem to the lower tier KC/EEO/BL/LP tables. This means mini-bosses now have a chance to drop these spawning items.</li>
+              <li>Adjusted drop of Rune of Shaloz up some on the mobs that currently have it (design here is that you are not meant to get entire set unless you hunt after or do quest multiple times)</li>
+             </ul>
+             ===Spawns===
+             <ul>
+              <li>Lord Cerebus respawn time reduced and randomized. Still a tigger chance to spawn, but duration between respawns has been halved to allow two chances minimum per dungeon pass timer.</li>
+              <li>The Prime Creation has been given a shorter and randomized respawn timer, increased chance of boss vs PH</li>
+              <li>Shark guards will patrol dragon coast for anchored boats...</li>
+              <li>Adjusted rotted ghoul spawn in Meroven graveyard and Gnobol Mauseleum, greater skeles moved below</li>
+             </ul>
+             ===Spells===
+             <ul>
+              <li>Stat buff spells (excluding movement speed buffs) reduced cast times across the board to match holy Aura's speed</li>
+              <li>Chat printout for buff values on Mind buffs(Cerebral Though, Brilliance, Insight, Resplendence).</li>
+             </ul>
+             ===The Junk Drawer===
+             <ul>
+              <li>SI altar adjusted to correct time (30 min cooldown; if started at 9pm, can start a new SI at 10:30pm). SI cooldown is there for all levels of solo/small group players; this is not an ideal long term fix but something to help those players not be at the mercy of SIs which drastically impact their ability to hunt.
+                Long term idea is placeable altars/totems which increase spawns in a radius on ground or on the player using.
+              </li>
+              <li>Faction Quest for Lotor/Talazar now allow you to cancel once started (speak to faction officer to cancel) plus additional conf to begin neutral quest</li>
+              <li>A bit of cleanup on faction timers and quest text</li>
+              <li>New Name for Lotorian Faction Dungeon quest(was "For the King" which was the same title as the faction quest itself; now it is "Royal Relic")</li>
+              <li>Gauntlet event adjust (reduced mob spawns)</li>
+             </ul>
+             <p>
+              
+             </p>
+            </article>
+            <div class="body-line"></div>
+            <article>
               <small class="article-date">FujiQ 1/15/2023</small>
              <ul>
               <li>fix for Gauntlet event - effects could be cast just before entering</li>
