Added New patch Notes and Grab Bag for FEB

--- a/index.html
+++ b/index.html
@@ -241,6 +241,26 @@
             </article> -->
             <div class="body-line"></div>
             <article>
+              <small class="article-date">FujiQ 2/1/2023</small>
+             <ul>
+              <li>Adding logout check while in BFD</li>
+              <li>Adjust to faction dungeon drop tables (chances only not additions/deletions)</li>
+              <li>Corrected missing material for new Vint/Gol items</li>
+              <li>Fixed SoC potions on TR mob tables</li>
+              <li>Faction check for all neutral factions in scripts that look for neutral faction</li>
+              <li>Claw of the Werewolf should last 4 min with the Armor of the Cynosure now</li>
+              <li>Added chat prints for all buff spells</li>
+              <li>Fixed error in Tome of Demonic Inspiration adding too much to Parasitic Leech, now +10%</li>
+              <li>Fixed traps in SoC dungeons acting as walls that created pathfinding issues and prevented players from completing farming quest portion in SoC crypt</li>
+              <li>Fixed Demon Spire from spawning ancient demon/balron if not used for Hell Siege event</li>
+              <li>Glowing Jewelry Case had no setting for crafting; adjusted to be similar to glowing storage crate</li>
+            </ul>
+             <p>
+              
+             </p>
+            </article>
+            <div class="body-line"></div>
+            <article>
               <small class="article-date">FujiQ 1/21/23</small>
               <p>
                Just a bit of cleanup on spawns, drops, items, and the gauntlet event.
@@ -1612,7 +1632,9 @@
                       <div id="february2023" class="panel-collapse collapse">
                         <div class="panel-body accordion-border">
                             <ul class="light-grey-text">
-                                <li></li>
+                                <li>2 Summon Corpse</li>
+                                <li>1 Item Restoration Pack</li>
+                                <li>4 Personal Power Hour</li>
                             </ul>
                         </div>
                       </div>
