Updated Grab Bags to Aug-23

--- a/index.html
+++ b/index.html
@@ -1649,7 +1649,11 @@
                       <div id="march2023" class="panel-collapse collapse">
                         <div class="panel-body accordion-border">
                             <ul class="light-grey-text">
-                                <li></li>
+                                <li>1 Teleport Stone Pack</li>
+                                <li>1 Wizard's Familiar (10% damage boost to spell damage)</li>
+                                <li>1 Broken Finger Access</li>
+                                <li>2 Personal Power Hour</li>
+                                <li>2 Ddrop Rate Increase</li>
                             </ul>
                         </div>
                       </div>
@@ -1664,7 +1668,10 @@
                       <div id="april2023" class="panel-collapse collapse">
                         <div class="panel-body accordion-border">
                             <ul class="light-grey-text">
-                                <li></li>
+                                <li>1 Name Change</li>
+                                <li>1 Basic Mask Pack</li>
+                                <li>2 Jail Pardon</li>
+                                <li>2 Reverse Alignment</li>
                             </ul>
                         </div>
                       </div>
@@ -1679,7 +1686,10 @@
                       <div id="may2023" class="panel-collapse collapse">
                         <div class="panel-body accordion-border">
                             <ul class="light-grey-text">
-                                <li></li>
+                                <li>6 Drop Rate Increase</li>
+                                <li>3 Lair of Minos Access</li>
+                                <li>3 Broken Finger Access</li>
+                                <li>1 Advanced Skill Reset</li>
                             </ul>
                         </div>
                       </div>
@@ -1694,7 +1704,11 @@
                       <div id="june2023" class="panel-collapse collapse">
                         <div class="panel-body accordion-border">
                             <ul class="light-grey-text">
-                                <li></li>
+                                <li>1 Avatar Mask Pack</li>
+                                <li>12 Event Tickets</li>
+                                <li>1 Greater Potion Pack</li>
+                                <li>2 Henchmen</li>
+                                <li>3 Personal Power Hour</li>
                             </ul>
                         </div>
                       </div>
@@ -1709,7 +1723,11 @@
                       <div id="july2023" class="panel-collapse collapse">
                         <div class="panel-body accordion-border">
                             <ul class="light-grey-text">
-                                <li></li>
+                                <li>1 Chest of Holding</li>
+                                <li>2 Summon Corpse</li>
+                                <li>1 Broken Finger Access</li>
+                                <li>1 Item Restoration</li>
+                                <li>3 Drop Rate Increase</li>
                         </div>
                       </div>
                     </div>
@@ -1723,7 +1741,10 @@
                       <div id="august2023" class="panel-collapse collapse">
                         <div class="panel-body accordion-border">
                             <ul class="light-grey-text">
-                                <li></li>
+                                <li>3 Berserker Pots</li>
+                                <li>3 Personal Power Hour</li>
+                                <li>1 Chest of Holding</li>
+                                <li>1 Teleport Stone Pack</li>
                             </ul>
                         </div>
                       </div>
