Added images to Warrior of Krog Quest

--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -412,6 +412,7 @@
                             Many different creatures                            
                           </td>
                           <td>
+                          <img class="thumbnail-img" src="Images/BlackSwamp/Warrior_of_Krog_Scroll_of_Return.png" alt="Scroll of Return: Krog" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Warrior_of_Krog_Scroll_of_Return_Stats.png' alt='Necklace of Krog Stats'>">
                           <img class="thumbnail-img" src="Images/BlackSwamp/Warrior_of_Krog_Necklace_of_Krog.png" alt="Necklace of Krog" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Warrior_of_Krog_Necklace_of_Krog_Stats.png' alt='Necklace of Krog Stats'>">
                           <img class="thumbnail-img" src="Images/BlackSwamp/Warrior_of_Krog_Ring_of_Krog.png" alt="Ring of Krog" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Warrior_of_Krog_Ring_of_Krog_Stats.png' alt='Ring of Krog Stats'>">
                           <img class="thumbnail-img" src="Images/BlackSwamp/Warrior_of_Krog_Gloves_of_Krog.png" alt="Gloves of Krog" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Warrior_of_Krog_Gloves_of_Krog_Stats.png' alt='Gloves of Krog Stats'>">
@@ -466,16 +467,16 @@
                       Follow the path south to Maraket and Speak to <span class="light-red">Lady Targon</span> in the bank. She will greet you and reward you for you loyal patronage. Your reward are pieces of the Krog Armor. You will recieve a new pieces at diffent stages of your faction points.
                       <hr>
                         <ul>
-                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">500</strong> Faction Points <span class="light-red">Necklace of Krog</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">500</strong> Faction Points <span class="light-red">Necklace of Krog & Scroll of Return: Krog</span></li>
                           <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">800</strong> Faction Points <span class="light-red">Ring of Krog</span></li>
                           <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">1300</strong> Faction Points <span class="light-red">Gloves of Krog</span></li>
-                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">1800</strong> Faction Points <span class="light-red">Belt of Krog</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">1800</strong> Faction Points <span class="light-red">Belt of Krog & Scroll of Return: Krog</span></li>
                           <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">2300</strong> Faction Points <span class="light-red">Helm of Krog</span></li>
                           <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">2800</strong> Faction Points <span class="light-red">Boots of Krog</span></li>
-                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">3300</strong> Faction Points <span class="light-red">Cloak of Krog</span></li>
-                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">3800</strong> Faction Points <span class="light-red">Guardian of Krog</span></li>
-                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">4300</strong> Faction Points <span class="light-red">Leggings of Krog</span></li>
-                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">4800</strong> Faction Points <span class="light-red">Armor of Krog</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">3300</strong> Faction Points <span class="light-red">Cloak of Krog & Scroll of Return: Krog</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">3800</strong> Faction Points <span class="light-red">Leggings of Krog</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">4800</strong> Faction Points <span class="light-red">Guardian of Krog</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">5800</strong> Faction Points <span class="light-red">Armor of Krog & Scroll of Return: Krog</span></li>
                         </ul>
                         <hr>  
                         <p class="mt-4 py-3 text-center quest-complete">
