Added clearfix to Image of Lady Targon

--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -462,7 +462,7 @@
                         </ul>  
                         <hr>
                     </p>
-                    <p>
+                    <p class="clearfix">
                       <img class="npc-img" src="Images/BlackSwamp/Warrior_of_Krog_Lady_Targon.png" alt="Lady Targon">
                       Follow the path south to Maraket and Speak to <span class="light-red">Lady Targon</span> in the bank. She will greet you and reward you for you loyal patronage. Your reward are pieces of the Krog Armor. You will recieve a new pieces at diffent stages of your faction points.
                       <hr>
