Added Image Large Fire Ant to the Formidable Quest

--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -714,7 +714,7 @@
                         <span class="green">QUEST RECEIVED:</span><span class="red"> Formidable Formicidae</span><span class="orange">, Head south of Krog and kill 40 Fire Ants for Haburt.</span>
                         <br>
                         Check this map for the location of the Fire Ant colony. <img class="monster-img" src="Images/BlackSwamp/Formidable_Formicidae_Fire_Ant_Colony_Krog.png" alt="Map of the Fire Ant Colony south of Krog"> Be careful not to get swarmed by the <span class="red">fire ants</span>. <img class="monster-img" src="Images/NPC/Monsters/Fire_Ant.png" alt="Fire Ant">
-                        They can easily overwhelm you if your not careful. Watch out for the one spawn of the <span class="red">Large Fire Ant</span>. <img class="monster-img" src="" alt="Large Fire Ant"> Kill 40 you will be updated along the way to let you konw how many you have killed.
+                        They can easily overwhelm you if your not careful. Watch out for the one spawn of the <span class="red">Large Fire Ant</span>. <img class="monster-img" src="Images/NPC/Monsters/Large_Fire_Ant.png" alt="Large Fire Ant"> Kill 40 you will be updated along the way to let you konw how many you have killed.
                         <br>
                         <span class="green">QUEST UPDATE: You have killed 40 Fire Ants for Haburt</span> 
                         <br>
