Added stats to Kobold Chief

--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -1628,13 +1628,15 @@
 
                         <br>
                         <span class="green">QUEST RECEIVED:</span><span class="red"> Payment in Full</span><span class="orange">, Find the Kobold Fort west of Maraket dunaga expects payment from the Kobold Chief.</span>
-                        <br>
-                        <img class="monster-img" src="Images/BlackSwamp/Payment_in_Full_Kobold_Fort.png" alt="Fort Location"> Head out to the west, stay more north and you will run in the "BIG FORT". When you get their you want to
+                        <p class="clearfix">
+                        <img class="npc-img" src="Images/BlackSwamp/Payment_in_Full_Kobold_Fort.png" alt="Fort Location"> Head out to the west, stay more north and you will run in the "BIG FORT". When you get their you want to
                         look for the Chief's hut. Go inside and up the ladder.
-                        <br>
-                        <img class="monster-img" src="Images/NPC/Monsters/Kobold_Chief.png" alt="Kobold Chief"> He will be their with two Kobold Brigands. If he is not their he is on a 1 hour timer. Hang around for an hour or so until he spawns.
+                        </p>
+                        <p>
+                        <img class="monster-img" src="Images/NPC/Boss/Kobold_Chief.png" alt="Kobold Chief" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Boss/Kobold_Chief_Stats.png' alt='Kobold Chief stats'>">
+                        He will be their with two Kobold Brigands. If he is not their he is on a 1 hour timer. Hang around for an hour or so until he spawns.
                         Once you kill him you will find a small scrap of paper. 
-                        <br>
+                        </p>
 
                         <span class="green">QUEST UPDATED:</span><span class="red"> Payment in Full</span><span class="orange">, You found a small scrap of paper. Return to Dunaga in Maraket.</span>
 
