Added buttons per town

--- a/quest.html
+++ b/quest.html
@@ -163,18 +163,24 @@
             <h2>THE STARTING TOWN QUEST</h2>
             <br>
             <h3 id="silvestValley" class="anchor">Silvest Valley</h3>
-            <p>Silvest is the home of the Humans! These quest are for the towns of Silvest, Eastwatch and Cliffside</p>
-            <button type="button" class="btn btn-dark"><a href="silvestValley.html">Silvest Valley</a></button> 
+            <p>Silvest is the home of the Humans!</p>
+            <button type="button" class="btn btn-dark"><a href="silvestValley.html">Silvest</a></button>
+            <button type="button" class="btn btn-dark"><a href="silvestValley.html">Eastwatch</a></button> 
+            <button type="button" class="btn btn-dark"><a href="silvestValley.html">Cliffside</a></button>  
             <div class="space"></div>
 
             <h3 id="blackSwamp" class="anchor">Black Swamp</h3>
-            <p>Black swamp is the home of the orcs. These quest are for the towns of Krog, Maraket and Samad.</p>
-            <button type="button" class="btn btn-dark"><a href="blackSwamp.html">Black Swamp</a></button>
+            <p>Black swamp is the home of the orcs!</p>
+            <button type="button" class="btn btn-dark"><a href="blackSwamp.html">Krog</a></button>
+            <button type="button" class="btn btn-dark"><a href="blackSwamp.html">Maraket</a></button>
+            <button type="button" class="btn btn-dark"><a href="blackSwamp.html">Samad</a></button>
             <div class="space"></div>
 
             <h3 id="darkwoods" class="anchor">Darkwoods</h3>
-            <p>Darkwoods is the home of the Night Elves! These quest are for the towns of Whisperdale, Autumn and the Hunting Lodge.</p>
-            <button type="button" class="btn btn-dark"><a href="darkWoods.html">Darkwoods</a></button>
+            <p>Darkwoods is the home of the Night Elves!</p>
+            <button type="button" class="btn btn-dark"><a href="darkWoods.html">Whisperdale</a></button>
+            <button type="button" class="btn btn-dark"><a href="darkWoods.html">Autumn</a></button>
+            <button type="button" class="btn btn-dark"><a href="darkWoods.html">Hunting Lodge</a></button>
             <div class="line"></div>
 
             <h2>KRYTHAN ISLAND QUEST</h2>
@@ -184,17 +190,24 @@
             <button type="button" class="btn btn-dark"><a href="#">Krythan</a></button>
             <div class="line"></div>
 
+
             <h2>MAINLAND QUEST</h2>
-            <br>            
+            <br>  
+            
+            <h3 id="highlands" class="anchor">Highlands</h3>
+            <h6>Towns</h6>
+            <button type="button" class="btn btn-dark"><a href="highlands.html#dawat">Dawat</a></button>
+            <button type="button" class="btn btn-dark"><a href="highlands.html#arda">Arda</a></button>
+            <button type="button" class="btn btn-dark"><a href="highlands.html#grell">Grell</a></button>
+            <button type="button" class="btn btn-dark"><a href="highlands.html#etheraPalace">Ethera Palace</a></button>
+            <button type="button" class="btn btn-dark"><a href="highlands.html#abbey">Abbey</a></button>
+            <button type="button" class="btn btn-dark"><a href="highlands.html#parian">Parian</a></button>
+            
+            <div class="line"></div>
+
             <h3 id="battlePlains" class="anchor">Battle Plains</h3>
             <p>Comeing Soon</p>
             <button type="button" class="btn btn-dark"><a href="#">Battle Plains</a></button>
-
-            <div class="space"></div>
-            <h3 id="highlands" class="anchor">Highlands</h3>
-            <h6>Towns</h6>
-            <p>Arda, Dawat, Grell, Parian</p>
-            <button type="button" class="btn btn-dark"><a href="highlands.html">Highlands</a></button>
 
             <div class="line"></div>
             <h3 id="westernIsles" class="anchor">Western Isles</h3>
