Completed Lloyd the Loyal Quest

--- a/highlands.html
+++ b/highlands.html
@@ -2522,8 +2522,14 @@
                       <br>
                       <span class="green">QUEST UPDATE:</span><span class="red"> Lloyd the Loyal</span><span class="orange">, Kill 75 Astari Assassins in the Cave.</span>
                       <br>
-                      Head back in the cave and in the the Temple of Sabal and kill <span class="red">Astari Assassins</span>.
+                      Head back in the cave and in the the Temple of Sabal and kill <span class="red">Astari Assassins</span>. As you kill them you will be updated <span class="green">You have killed 75 Astari Assassins for Lloyd Dogen!</span> When you have killed the 75 you will be updated to return to Lloyd Dogen.
+                      <br>
+                      <span class="green">QUEST UPDATE:</span><span class="red"> Lloyd the Loyal</span><span class="orange">, Return to Lloyd Dogen.</span>
                     </p> 
+                    <p>
+                      <span class="light-red">Lloyd Dogen:</span> You've eliminated them? Amazing! <span class="orange">*He slaps you on the back*</span> I'll just go dip my sword in some blood, or ...or find a scrap of tunic, maybe. A...a broken dagger!
+                      Now don't give me that look. Please? I want to reassure my dear Mina that she can rest easy again. She's been so restless since I stopped adventuring.
+                    </p>
                      <hr>
                      <ul>
                        <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">82,500</strong> Experience Pool <span class="light-red">experience may very</span></li>
@@ -2533,7 +2539,7 @@
                    <p class="mt-4 py-3 text-center quest-complete">
                      Quest Complete
                    </p>
-                      You have returned Maid Nelly's locket.
+                      You've eliminated the Astari Assassins for Lloyd Dogen.
                  </div>
                </div>
              </div>
