Added new Images to page

--- a/highlands.html
+++ b/highlands.html
@@ -2308,7 +2308,7 @@
                     <img class="npc-img" src="Images/NPC/Town/Parian_Jacko.png" alt="Jacko"> 
                   </div>      
                   <div> 
-                    <img class="npc-img" src="Images/NPC/Town/Parian_MrButtons.png" alt="Mr Buttons"> 
+                    <img class="npc-img" src="Images/NPC/Town/Parian_Mr_Buttons.png" alt="Mr Buttons"> 
                   </div>  
                   <div> 
                     <img class="npc-img" src="Images/NPC/Town/Parian_Claricia_Florence.png" alt="Claricia Florence"> 
@@ -2385,7 +2385,7 @@
                     </div>    
                     <div>
                       <p class="num-color-green">Fineland Quest NPC</p> 
-                      <img class="npc-img" src="Images/NPC/Town/Parian_Bladruss.png" alt="Bladruss"> 
+                      <img class="npc-img" src="Images/NPC/Town/Parian_Basil.png" alt="Baisl"> 
                     </div>   
                     <div> 
                       <p class="num-color-green">Governor</p> 
